--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
     </header>
     <div class="kotak_login">
-		<p class="tulisan_login">Silahkan login</p>
+		<p class="tulisan_login">Login</p>
 		<form>
 			<label>Username</label>
 			<input type="text" name="username" class="form_login" placeholder="Username atau email ..">
