--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>LinOS - Login</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link rel="shortcut icon" href="dark_lin-icon[center].png" >
+  <link rel="shortcut icon" href="resources/dark_lin-icon[center].png" >
 </head>
     <body>
       <header>
